--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,11 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css?family=Mountains+of+Christmas:700|Open+Sans:400,600&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Caveat&display=swap" rel="stylesheet"> 
+    
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
     
     <meta name="google-signin-client_id" content="50551686024-dfc0mvniq1fb3eslnp0n65m5o5ofe69s.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js?onload=triggerGoogleLoaded" async defer></script>
