--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Create and share christmas wish lists"
+      content="Create and share wish lists"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
@@ -28,7 +28,7 @@
           window.dispatchEvent(new Event('google-loaded'));
       }
     </script>
-    <title>Christmas lists</title>
+    <title>Wishlists</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
